# librand

./: Cargo.toml  README.md
lib/: rand.h
src/: lib.rs
