[package]
name = "rand"
version = "1.0.0"
description = "rand crate ported to c"
authors = ["XXIV"]
homepage = "https://github.com/thechampagne/librand"
repository = "https://github.com/thechampagne/librand"
readme = "README.md"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rand"
crate-type =["dylib","staticlib"]

[dependencies]
rand = "0.8.5"
